--- a/freshock/src/scss/home.scss
+++ b/freshock/src/scss/home.scss
@@ -483,6 +483,113 @@
 	}
 }
 //========================================================================================================================================================
+.banners {
+	@include adaptiveValue("padding-bottom", 75, 50);
+	// .banners__container
+	&__container {
+	}
+	// .banners__row
+	&__row {
+		display: flex;
+		align-items: center;
+		@include adaptiveValue("column-gap", 30, 15, 0, 1290, 1100);
+		row-gap: rem(15);
+
+		@media (max-width: $tablet) {
+			flex-wrap: wrap;
+		}
+	}
+	// .banners__column
+	&__column {
+		@media (max-width: $tablet) {
+			flex: 1 1 33.333%;
+		}
+	}
+
+	// .banners__picture
+	&__picture {
+		position: relative;
+	}
+	// .banners__image
+	&__image {
+		object-fit: cover;
+		width: 100%;
+		height: 100%;
+		border-radius: 6px;
+		height: 300px;
+		min-width: 345px;
+		@media (max-width: $tablet) {
+			min-width: 280px;
+		}
+		// .banners__image_big
+		&_big {
+			width: 100%;
+			@media (min-width: $tablet) {
+				max-width: 630px;
+			}
+		}
+	}
+	// .banners__content
+	&__content {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		@include adaptiveValue("left", 30, 15);
+	}
+	// .banners__title
+	&__title {
+		font-weight: 700;
+		font-size: 12px;
+		line-height: math.div(12, 12);
+		letter-spacing: 0.1em;
+		text-transform: uppercase;
+		color: $dark-500;
+		&:not(:last-child) {
+			margin-bottom: rem(18);
+		}
+		// .banners__title_color-white
+		&_color-white {
+			text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.25);
+			color: $white;
+		}
+	}
+	// .banners__sub-title
+	&__sub-title {
+		font-family: "Ruda";
+		font-weight: 600;
+		@include adaptiveValue("font-size", 30, 24);
+		line-height: math.div(42, 30);
+		text-transform: uppercase;
+		color: $dark-500;
+		max-width: 160px;
+		&:not(:last-child) {
+			margin-bottom: rem(10);
+		}
+		// .banners__sub-title_color-white
+		&_color-white {
+			color: $white;
+			text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.25);
+			max-width: 350px;
+		}
+	}
+	// .banners__link
+	&__link {
+		font-weight: 700;
+		font-size: 14px;
+		line-height: math.div(14, 14);
+		color: $dark-500;
+		padding-bottom: 5px;
+		border-bottom: 2px solid $dark-500;
+		// .banners__link_color-white
+		&_color-white {
+			text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.25);
+			color: $white;
+			padding-bottom: 5px;
+			border-bottom: 2px solid $white;
+		}
+	}
+}
+//========================================================================================================================================================
 .stock {
 	@include adaptiveValue("padding-top", 75, 50);
 	@include adaptiveValue("padding-bottom", 75, 50);
@@ -801,13 +908,6 @@
 		height: 59px;
 	}
 }
-.swiper {
-}
-.swiper-wrapper {
-}
-.swiper-slide {
-}
-
 //========================================================================================================================================================
 .news {
 	@include adaptiveValue("padding-top", 70, 50);
