--- a/freshock/css/style.css
+++ b/freshock/css/style.css
@@ -1906,6 +1906,95 @@ textarea.input {
   background: rgba(99, 166, 14, 0.2);
 }
 
+.banners__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  row-gap: 0.9375rem;
+}
+
+.banners__picture {
+  position: relative;
+}
+
+.banners__image {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+  height: 300px;
+  min-width: 345px;
+}
+
+.banners__image_big {
+  width: 100%;
+}
+
+.banners__content {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.banners__title {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #505050;
+}
+
+.banners__title:not(:last-child) {
+  margin-bottom: 1.125rem;
+}
+
+.banners__title_color-white {
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.25);
+  color: #fff;
+}
+
+.banners__sub-title {
+  font-family: "Ruda";
+  font-weight: 600;
+  line-height: 1.4;
+  text-transform: uppercase;
+  color: #505050;
+  max-width: 160px;
+}
+
+.banners__sub-title:not(:last-child) {
+  margin-bottom: 0.625rem;
+}
+
+.banners__sub-title_color-white {
+  color: #fff;
+  text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.25);
+  max-width: 350px;
+}
+
+.banners__link {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1;
+  color: #505050;
+  padding-bottom: 5px;
+  border-bottom: 2px solid #505050;
+}
+
+.banners__link_color-white {
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.25);
+  color: #fff;
+  padding-bottom: 5px;
+  border-bottom: 2px solid #fff;
+}
+
 .stock {
   background-color: #f5f5f5;
 }
@@ -3243,6 +3332,10 @@ button.swiper-pagination-bullet {
     grid-template-columns: repeat(4, 1fr);
   }
 
+  .banners__image_big {
+    max-width: 630px;
+  }
+
   .news__body {
     -ms-grid-columns: (1fr)[3];
     grid-template-columns: repeat(3, 1fr);
@@ -3277,6 +3370,12 @@ button.swiper-pagination-bullet {
     -webkit-column-gap: 4.6875rem;
        -moz-column-gap: 4.6875rem;
             column-gap: 4.6875rem;
+  }
+
+  .banners__row {
+    -webkit-column-gap: 1.875rem;
+       -moz-column-gap: 1.875rem;
+            column-gap: 1.875rem;
   }
 
   .cards {
@@ -3379,6 +3478,18 @@ button.swiper-pagination-bullet {
 
   .block__content:not(:last-child) {
     margin-bottom: 3.125rem;
+  }
+
+  .banners {
+    padding-bottom: 4.6875rem;
+  }
+
+  .banners__content {
+    left: 1.875rem;
+  }
+
+  .banners__sub-title {
+    font-size: 1.875rem;
   }
 
   .stock {
@@ -3531,6 +3642,18 @@ button.swiper-pagination-bullet {
     margin-bottom: 1.5625rem;
   }
 
+  .banners {
+    padding-bottom: 3.125rem;
+  }
+
+  .banners__content {
+    left: 0.9375rem;
+  }
+
+  .banners__sub-title {
+    font-size: 1.5rem;
+  }
+
   .stock {
     padding-top: 3.125rem;
   }
@@ -3607,6 +3730,14 @@ button.swiper-pagination-bullet {
   }
 }
 
+@media (max-width: 68.75em) {
+  .banners__row {
+    -webkit-column-gap: 0.9375rem;
+       -moz-column-gap: 0.9375rem;
+            column-gap: 0.9375rem;
+  }
+}
+
 @media (max-width: 61.9375em) {
   .main-header__items {
     margin-right: 1.25rem;
@@ -3651,6 +3782,21 @@ button.swiper-pagination-bullet {
 
   .services__item {
     max-width: 100%;
+  }
+
+  .banners__row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
+  .banners__column {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 33.333%;
+            flex: 1 1 33.333%;
+  }
+
+  .banners__image {
+    min-width: 280px;
   }
 }
 
@@ -4214,6 +4360,42 @@ button.swiper-pagination-bullet {
     }
 }
 
+@supports (padding-bottom: clamp( 3.125rem , 2.625rem  +  2.5vw , 4.6875rem )) {
+    .banners {
+      padding-bottom: clamp( 3.125rem , 2.625rem  +  2.5vw , 4.6875rem );
+    }
+}
+
+@supports not (padding-bottom: clamp( 3.125rem , 2.625rem  +  2.5vw , 4.6875rem )) {
+    .banners {
+      padding-bottom: calc(3.125rem + 1.5625 * (100vw - 20rem) / 62.5);
+    }
+}
+
+@supports (left: clamp( 0.9375rem , 0.6375rem  +  1.5vw , 1.875rem )) {
+    .banners__content {
+      left: clamp( 0.9375rem , 0.6375rem  +  1.5vw , 1.875rem );
+    }
+}
+
+@supports not (left: clamp( 0.9375rem , 0.6375rem  +  1.5vw , 1.875rem )) {
+    .banners__content {
+      left: calc(0.9375rem + 0.9375 * (100vw - 20rem) / 62.5);
+    }
+}
+
+@supports (font-size: clamp( 1.5rem , 1.38rem  +  0.6vw , 1.875rem )) {
+    .banners__sub-title {
+      font-size: clamp( 1.5rem , 1.38rem  +  0.6vw , 1.875rem );
+    }
+}
+
+@supports not (font-size: clamp( 1.5rem , 1.38rem  +  0.6vw , 1.875rem )) {
+    .banners__sub-title {
+      font-size: calc(1.5rem + 0.375 * (100vw - 20rem) / 62.5);
+    }
+}
+
 @supports (padding-top: clamp( 3.125rem , 2.625rem  +  2.5vw , 4.6875rem )) {
     .stock {
       padding-top: clamp( 3.125rem , 2.625rem  +  2.5vw , 4.6875rem );
@@ -4425,6 +4607,24 @@ button.swiper-pagination-bullet {
 @supports not (margin-right: clamp( 1.25rem , -13.3928571429rem  +  14.2857142857vw , 3.75rem )) {
     .main-page__arrow_right {
       margin-right: calc(1.25rem + 2.5 * (100vw - 102.5rem) / 17.5);
+    }
+}
+}
+
+@media (min-width: 68.75em) and (max-width: 80.625em) {
+@supports ((-moz-column-gap: clamp( 0.9375rem , -4.4901315789rem  +  7.8947368421vw , 1.875rem )) or (column-gap: clamp( 0.9375rem , -4.4901315789rem  +  7.8947368421vw , 1.875rem ))) {
+    .banners__row {
+      -webkit-column-gap: clamp( 0.9375rem , -4.4901315789rem  +  7.8947368421vw , 1.875rem );
+         -moz-column-gap: clamp( 0.9375rem , -4.4901315789rem  +  7.8947368421vw , 1.875rem );
+              column-gap: clamp( 0.9375rem , -4.4901315789rem  +  7.8947368421vw , 1.875rem );
+    }
+}
+
+@supports not ((-moz-column-gap: clamp( 0.9375rem , -4.4901315789rem  +  7.8947368421vw , 1.875rem )) or (column-gap: clamp( 0.9375rem , -4.4901315789rem  +  7.8947368421vw , 1.875rem ))) {
+    .banners__row {
+      -webkit-column-gap: calc(0.9375rem + 0.9375 * (100vw - 68.75rem) / 11.875);
+         -moz-column-gap: calc(0.9375rem + 0.9375 * (100vw - 68.75rem) / 11.875);
+              column-gap: calc(0.9375rem + 0.9375 * (100vw - 68.75rem) / 11.875);
     }
 }
 }
